# Instrument-Cluster

./: CMakeLists.txt  InstrumentCluster  README.md  pull_script.sh  rpm_sensor.ino  script.sh  setup_piracer.sh
.github/workflows/: ci.yaml  docker-image.yml
documentation/: Arduino.md  CAN.md  DBus.md  Qt-GUI.md  mindmap.drawio  qt-cross-compilation.md
gui/: README.md
gui/gauge3/: Gauge.qml  main.cpp  speedcontroller.cpp
gui/gaugeQt5/: CMakeLists.txt  main.cpp  main.qml
gui/gaugeQt5/src/: main.cpp  main.qml  speedcontroller.h
gui/gaugeQt6/: CMakeLists.txt  CanHandler.cpp  CanHandler.h  Gauge.qml  KalmanFilter.h  README.md  canhandler.cpp  main.cpp  main.qml  speedcontroller.h
src/: CMakeLists.txt  CanHandler.cpp  CanHandler.h  Gauge.qml  KalmanFilter.cpp  KalmanFilter.h  SpeedController.cpp  SpeedController.h  main.cpp  main.qml  speedcontroller.cpp  speedcontroller.h
src/arduino/: arduino_reciever.ino  main_arduino_sender.ino  rpm_sensor.ino
src/testing_connection_with_arduinos/: sender.ino
testing_connection_with_arduinos/: reciever.ino
